{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 413,
  "lineage": "b95202c7-1f7b-05ae-1fbd-865812fc7931",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:697863031884:loadbalancer/app/3tier-alb/a0989ae7cada45b4",
            "arn_suffix": "app/3tier-alb/a0989ae7cada45b4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "3tier-alb-1125948243.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:697863031884:loadbalancer/app/3tier-alb/a0989ae7cada45b4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "3tier-alb",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-0eab639fe9394b19a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f991466b7ab3aad"
              },
              {
                "subnet_id": "subnet-0576ee190e92a9535"
              }
            ],
            "subnets": [
              "subnet-04f991466b7ab3aad",
              "subnet-0576ee190e92a9535"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "3tier-alb",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-alb",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "vpc_id": "vpc-0cbb1477f21e048bc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:697863031884:loadbalancer/app/3tier-alb/a0989ae7cada45b4"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.db",
            "module.security.aws_security_group.web",
            "module.security.aws_vpc_security_group_egress_rule.app_all",
            "module.security.aws_vpc_security_group_egress_rule.db_all",
            "module.security.aws_vpc_security_group_egress_rule.web_all",
            "module.security.aws_vpc_security_group_ingress_rule.app_http",
            "module.security.aws_vpc_security_group_ingress_rule.app_icmp",
            "module.security.aws_vpc_security_group_ingress_rule.db_icmp",
            "module.security.aws_vpc_security_group_ingress_rule.db_mysql",
            "module.security.aws_vpc_security_group_ingress_rule.web_http",
            "module.security.aws_vpc_security_group_ingress_rule.web_https",
            "module.security.aws_vpc_security_group_ingress_rule.web_icmp"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:697863031884:listener/app/3tier-alb/a0989ae7cada45b4/54b6590cbed65927",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:697863031884:targetgroup/3tier-tg/5696a66b09cd99c4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:697863031884:listener/app/3tier-alb/a0989ae7cada45b4/54b6590cbed65927",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:697863031884:loadbalancer/app/3tier-alb/a0989ae7cada45b4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:697863031884:listener/app/3tier-alb/a0989ae7cada45b4/54b6590cbed65927"
          },
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.db",
            "module.security.aws_security_group.web",
            "module.security.aws_vpc_security_group_egress_rule.app_all",
            "module.security.aws_vpc_security_group_egress_rule.db_all",
            "module.security.aws_vpc_security_group_egress_rule.web_all",
            "module.security.aws_vpc_security_group_ingress_rule.app_http",
            "module.security.aws_vpc_security_group_ingress_rule.app_icmp",
            "module.security.aws_vpc_security_group_ingress_rule.db_icmp",
            "module.security.aws_vpc_security_group_ingress_rule.db_mysql",
            "module.security.aws_vpc_security_group_ingress_rule.web_http",
            "module.security.aws_vpc_security_group_ingress_rule.web_https",
            "module.security.aws_vpc_security_group_ingress_rule.web_icmp"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:697863031884:targetgroup/3tier-tg/5696a66b09cd99c4",
            "arn_suffix": "targetgroup/3tier-tg/5696a66b09cd99c4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:697863031884:targetgroup/3tier-tg/5696a66b09cd99c4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:697863031884:loadbalancer/app/3tier-alb/a0989ae7cada45b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "3tier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "3tier-tg",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-tg",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:697863031884:targetgroup/3tier-tg/5696a66b09cd99c4"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.db",
            "module.security.aws_security_group.web",
            "module.security.aws_vpc_security_group_egress_rule.app_all",
            "module.security.aws_vpc_security_group_egress_rule.db_all",
            "module.security.aws_vpc_security_group_egress_rule.web_all",
            "module.security.aws_vpc_security_group_ingress_rule.app_http",
            "module.security.aws_vpc_security_group_ingress_rule.app_icmp",
            "module.security.aws_vpc_security_group_ingress_rule.db_icmp",
            "module.security.aws_vpc_security_group_ingress_rule.db_mysql",
            "module.security.aws_vpc_security_group_ingress_rule.web_http",
            "module.security.aws_vpc_security_group_ingress_rule.web_https",
            "module.security.aws_vpc_security_group_ingress_rule.web_icmp"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6b0beaa3078cb53",
            "arn": "arn:aws:ec2:eu-west-1:697863031884:elastic-ip/eipalloc-0b6b0beaa3078cb53",
            "association_id": "eipassoc-0093d87ce21062da7",
            "domain": "vpc",
            "id": "eipalloc-0b6b0beaa3078cb53",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0ad945d0146b491d7",
            "private_dns": "ip-10-0-1-96.eu-west-1.compute.internal",
            "private_ip": "10.0.1.96",
            "public_dns": "ec2-54-75-22-117.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.75.22.117",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-nat-eip",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-nat-eip",
              "Owner": "your_name",
              "Project": "3tier-iac"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:internet-gateway/igw-0fbc1d68bd848d244",
            "id": "igw-0fbc1d68bd848d244",
            "owner_id": "697863031884",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-igw",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-igw",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6b0beaa3078cb53",
            "association_id": "eipassoc-0093d87ce21062da7",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f233e351f3c4c744",
            "network_interface_id": "eni-0ad945d0146b491d7",
            "private_ip": "10.0.1.96",
            "public_ip": "54.75.22.117",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0576ee190e92a9535",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-natgw",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-natgw",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:route-table/rtb-06dc05cc09d26895d",
            "id": "rtb-06dc05cc09d26895d",
            "owner_id": "697863031884",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f233e351f3c4c744",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "3tier-app-rtb-1",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-app-rtb-1",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "rtb-06dc05cc09d26895d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:route-table/rtb-0e1417c92599b4020",
            "id": "rtb-0e1417c92599b4020",
            "owner_id": "697863031884",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f233e351f3c4c744",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "3tier-app-rtb-2",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-app-rtb-2",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "rtb-0e1417c92599b4020",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:route-table/rtb-07a05e73e04260d51",
            "id": "rtb-07a05e73e04260d51",
            "owner_id": "697863031884",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "3tier-db-rtb-1",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-db-rtb-1",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "rtb-07a05e73e04260d51",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:route-table/rtb-05cb92e81c1266ce1",
            "id": "rtb-05cb92e81c1266ce1",
            "owner_id": "697863031884",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "3tier-db-rtb-2",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-db-rtb-2",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "rtb-05cb92e81c1266ce1",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:route-table/rtb-02d14d2f0f2fbb19d",
            "id": "rtb-02d14d2f0f2fbb19d",
            "owner_id": "697863031884",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fbc1d68bd848d244",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "3tier-public-rtb",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-public-rtb",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "rtb-02d14d2f0f2fbb19d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6e56a767aecf049",
            "region": "eu-west-1",
            "route_table_id": "rtb-06dc05cc09d26895d",
            "subnet_id": "subnet-0c39f9f6d1faf1cfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff8bf400d7533b64",
            "region": "eu-west-1",
            "route_table_id": "rtb-0e1417c92599b4020",
            "subnet_id": "subnet-0b33b4b460a86833c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a49e50d636e96098",
            "region": "eu-west-1",
            "route_table_id": "rtb-07a05e73e04260d51",
            "subnet_id": "subnet-03d475ea283648d34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.db",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040d781592f03648a",
            "region": "eu-west-1",
            "route_table_id": "rtb-05cb92e81c1266ce1",
            "subnet_id": "subnet-0f87fe80ce36b7c0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.db",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0061b0e8e9a5cb98f",
            "region": "eu-west-1",
            "route_table_id": "rtb-02d14d2f0f2fbb19d",
            "subnet_id": "subnet-0576ee190e92a9535"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dcb7adc83919f5e",
            "region": "eu-west-1",
            "route_table_id": "rtb-02d14d2f0f2fbb19d",
            "subnet_id": "subnet-04f991466b7ab3aad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:subnet/subnet-0c39f9f6d1faf1cfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c39f9f6d1faf1cfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697863031884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-app-1",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-app-1",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "app"
            },
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "subnet-0c39f9f6d1faf1cfc",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:subnet/subnet-0b33b4b460a86833c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b33b4b460a86833c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697863031884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-app-2",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-app-2",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "app"
            },
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "subnet-0b33b4b460a86833c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:subnet/subnet-03d475ea283648d34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d475ea283648d34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697863031884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-db-1",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-db-1",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "db"
            },
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "subnet-03d475ea283648d34",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:subnet/subnet-0f87fe80ce36b7c0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f87fe80ce36b7c0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697863031884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-db-2",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-db-2",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "db"
            },
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "subnet-0f87fe80ce36b7c0d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:subnet/subnet-0576ee190e92a9535",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0576ee190e92a9535",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697863031884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-public-1",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-public-1",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "public"
            },
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "subnet-0576ee190e92a9535",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:subnet/subnet-04f991466b7ab3aad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f991466b7ab3aad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697863031884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-public-2",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-public-2",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "public"
            },
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "subnet-04f991466b7ab3aad",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:vpc/vpc-0cbb1477f21e048bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057b0a86701330ecb",
            "default_route_table_id": "rtb-0d6cc0b3e096f6a54",
            "default_security_group_id": "sg-0c1fa4c322504eb9c",
            "dhcp_options_id": "dopt-0bd9485c093def268",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cbb1477f21e048bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6cc0b3e096f6a54",
            "owner_id": "697863031884",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-vpc",
              "Owner": "your_name",
              "Project": "3tier-iac"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-vpc",
              "Owner": "your_name",
              "Project": "3tier-iac"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "vpc-0cbb1477f21e048bc",
            "region": "eu-west-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group/sg-03b7cdde9b61ad8bc",
            "description": "App SG: Allow HTTP from ALB/Web SG, ICMP from Web SG, all egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b7cdde9b61ad8bc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0eab639fe9394b19a"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eab639fe9394b19a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "697863031884",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "app-sg",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-sg",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sg-03b7cdde9b61ad8bc",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group/sg-02661b133fb91ff9c",
            "description": "DB SG: Allow DB port from App SG, ICMP from App SG, all egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02661b133fb91ff9c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-03b7cdde9b61ad8bc"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b7cdde9b61ad8bc"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "697863031884",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "db-sg",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "db-sg",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sg-02661b133fb91ff9c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group/sg-0eab639fe9394b19a",
            "description": "Web/ALB SG: Allow HTTP, ICMP, and health checks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eab639fe9394b19a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "697863031884",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "web-sg",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "web"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-sg",
              "Owner": "your_name",
              "Project": "3tier-iac",
              "Tier": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbb1477f21e048bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sg-0eab639fe9394b19a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group-rule/sgr-03e3f5e4209a22598",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03e3f5e4209a22598",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-03b7cdde9b61ad8bc",
            "security_group_rule_id": "sgr-03e3f5e4209a22598",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sgr-03e3f5e4209a22598",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group-rule/sgr-017c578c14d20991c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-017c578c14d20991c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-02661b133fb91ff9c",
            "security_group_rule_id": "sgr-017c578c14d20991c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sgr-017c578c14d20991c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.db"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "web_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group-rule/sgr-0a5b923a2cfec6a0d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a5b923a2cfec6a0d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0eab639fe9394b19a",
            "security_group_rule_id": "sgr-0a5b923a2cfec6a0d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sgr-0a5b923a2cfec6a0d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.web"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group-rule/sgr-085ff6eb6d5fb3d4f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-085ff6eb6d5fb3d4f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0eab639fe9394b19a",
            "region": "eu-west-1",
            "security_group_id": "sg-03b7cdde9b61ad8bc",
            "security_group_rule_id": "sgr-085ff6eb6d5fb3d4f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sgr-085ff6eb6d5fb3d4f",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.web"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group-rule/sgr-057e801c19a0b0bcf",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-057e801c19a0b0bcf",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0eab639fe9394b19a",
            "region": "eu-west-1",
            "security_group_id": "sg-03b7cdde9b61ad8bc",
            "security_group_rule_id": "sgr-057e801c19a0b0bcf",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sgr-057e801c19a0b0bcf",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.web"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group-rule/sgr-00c3039a77aef634d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-00c3039a77aef634d",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03b7cdde9b61ad8bc",
            "region": "eu-west-1",
            "security_group_id": "sg-02661b133fb91ff9c",
            "security_group_rule_id": "sgr-00c3039a77aef634d",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sgr-00c3039a77aef634d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.db"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group-rule/sgr-084f5f5272ae9222a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-084f5f5272ae9222a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03b7cdde9b61ad8bc",
            "region": "eu-west-1",
            "security_group_id": "sg-02661b133fb91ff9c",
            "security_group_rule_id": "sgr-084f5f5272ae9222a",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sgr-084f5f5272ae9222a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.db"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group-rule/sgr-04cd3ee495e30e5ef",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04cd3ee495e30e5ef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0eab639fe9394b19a",
            "security_group_rule_id": "sgr-04cd3ee495e30e5ef",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sgr-04cd3ee495e30e5ef",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.web"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group-rule/sgr-00e913179ef744a3c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-00e913179ef744a3c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0eab639fe9394b19a",
            "security_group_rule_id": "sgr-00e913179ef744a3c",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sgr-00e913179ef744a3c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.web"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:697863031884:security-group-rule/sgr-0c2d1ca15ac6f3da5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0c2d1ca15ac6f3da5",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0eab639fe9394b19a",
            "security_group_rule_id": "sgr-0c2d1ca15ac6f3da5",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697863031884",
            "id": "sgr-0c2d1ca15ac6f3da5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.app",
            "module.networking.aws_route_table.db",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.app",
            "module.networking.aws_route_table_association.db",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.web"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}